--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
+    "@angular/fire": "^17.0.1",
     "@angular/forms": "^17.2.0",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
@@ -32,7 +33,6 @@
     "marked-highlight": "^2.0.1",
     "mermaid": "^10.2.4",
     "prismjs": "^1.29.0",
-    "rxjs": "~7.5.6",
     "tslib": "^2.4.0",
     "zone.js": "~0.14.0"
   },
@@ -42,13 +42,15 @@
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
     "@nx/vite": "~18.0.0",
-    "nx": "~18.0.0",
+    "autoprefixer": "^10.4.14",
+    "firebase": "^10.8.1",
     "jsdom": "^22.1.0",
+    "nx": "~18.0.0",
+    "postcss": "^8.4.21",
+    "rxjs": "^7.8.1",
+    "tailwindcss": "^3.3.1",
     "typescript": "~5.3.0",
     "vite": "~5.0.0",
-    "vitest": "^1.3.1",
-    "tailwindcss": "^3.3.1",
-    "postcss": "^8.4.21",
-    "autoprefixer": "^10.4.14"
+    "vitest": "^1.3.1"
   }
 }
