--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,7 +5,7 @@
     "composite": false,
     "outDir": "./out-tsc/spec",
     "target": "es2016",
-    "types": ["node", "vitest/globals"]
+    "types": ["node", "vitest/globals"],
   },
   "files": ["src/test.ts"],
   "include": ["src/**/*.spec.ts", "src/**/*.ts"]
