--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@analogjs/content": "^0.2.0",
-    "@analogjs/router": "^0.2.0",
+    "@analogjs/content": "^1.1.0",
+    "@analogjs/router": "^1.1.0",
     "@angular/animations": "^17.2.0",
     "@angular/common": "^17.2.0",
     "@angular/compiler": "^17.2.0",
@@ -37,7 +37,7 @@
     "zone.js": "~0.14.0"
   },
   "devDependencies": {
-    "@analogjs/platform": "^0.2.0",
+    "@analogjs/platform": "^1.1.0",
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/cli": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
@@ -52,5 +52,6 @@
     "typescript": "~5.3.0",
     "vite": "~5.0.0",
     "vitest": "^1.3.1"
-  }
+  },
+  "type": "module"
 }
